Fixed a style to always show splash page even on small screens

--- a/src/www/css/virtualmachine.styl
+++ b/src/www/css/virtualmachine.styl
@@ -10,8 +10,7 @@
             display none
             .vm_container
                 width 1000px
-                margin -300px  auto auto
-                top 50%
+                margin 50px  auto auto
                 height 600px
                 //border 1px solid #acacac
                 position relative
